fixed indice issues, rotation working better. still some overlap in animations that needs working on

--- a/src/app/home/rotating.component.css
+++ b/src/app/home/rotating.component.css
@@ -15,14 +15,17 @@
   visibility: visible;
   transform: translate(0,0);
 }
+.active.moveLeft, .active.moveRight{
+  visibility: visible;
+}
 
 .moveLeft{
-  visibility: visible;
+
   transform: translate(-100%,0);
 }
 
 .moveRight{
-  visibility: visible;
+
   transform: translate(100%,0);
 }
 
